# isaac-utils

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: app.html  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/get_selection/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: icon.svelte  sidenav.svelte  tabs.svelte
src/components/alerts/: alert.svelte  alerts.svelte
src/components/unix/: base.svelte
src/components/unix/tabs/: convert.svelte  settings.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/main/: +page.svelte
src/routes/unix-popup/: +page.svelte
src/stores/: alert.ts  config.ts  main-window.ts
src/types/: tabs.ts
src/util/: config.ts  date.ts  object.ts  tauri.ts
