[package]
name = "isaac-utils"
version = "0.0.1"
description = "A collection of utilities made by and for Isaac (and maybe others)."
authors = ["Isaac Oram"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.9"
enigo = "0.2.1"
tauri-plugin-fs = "2.0.0-beta.11"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.8"
tauri-plugin-single-instance = "2.0.0-beta.11"
tauri-plugin-updater = "2.0.0-rc.0"

[target.'cfg(windows)'.dependencies]
windows = {version="0.58.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_UI_Accessibility", "Win32_System_Com"] }
arboard = "3.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9.2"
wl-clipboard-rs = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1.3"
